--- a/Abhinav_Singh_Airbnb_Bookings_Analysis_Capstone_Project.ipynb
+++ b/Abhinav_Singh_Airbnb_Bookings_Analysis_Capstone_Project.ipynb
@@ -92,7 +92,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5h3EJtB6I6oU",
-        "outputId": "1923e442-524b-4896-eb5f-068fb9634426"
+        "outputId": "7ff247b0-c4c6-4209-b5c2-384001068bac"
       },
       "source": [
         "# Mounting drive below\n",
@@ -117,7 +117,7 @@
       },
       "source": [
         "# Loading Airbnb NYC dataset\n",
-        "file_path = '/content/drive/MyDrive/Data Science/Capstone Project 1/Airbnb_NYC_2019.csv'\n",
+        "file_path = '/content/drive/MyDrive/Data Science/EDA Capstone Project/Airbnb NYC 2019.csv'\n",
         "dataset = pd.read_csv(file_path)"
       ],
       "execution_count": 3,
@@ -130,7 +130,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TbvS7p2mJRCZ",
-        "outputId": "c26973e8-c2aa-452d-c12f-ef09df9d0722"
+        "outputId": "b1aa91cc-8fe7-4d12-a12e-099fd5a5e370"
       },
       "source": [
         "# Checking basic info about dataset\n",
@@ -177,7 +177,7 @@
           "height": 417
         },
         "id": "v2b-vYXFJdjv",
-        "outputId": "f41b7994-99f1-4700-c1a0-a8ddd34b1cea"
+        "outputId": "10133fdb-3e61-4b06-a495-7bad0ba9a4c6"
       },
       "source": [
         "# Viewing head of the dataset\n",
@@ -360,7 +360,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8AoAvDzFJ0XR",
-        "outputId": "6828034d-18b7-4b3b-d7e4-cad7e270f033"
+        "outputId": "c0bc33ba-1498-49ab-da4d-bb164d6e4b7a"
       },
       "source": [
         "# Finding null values in dataset\n",
@@ -448,7 +448,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wZzdyvXGLVtF",
-        "outputId": "b9f548d7-aad4-4f4b-cb9a-8e7780fd1650"
+        "outputId": "d79e0277-b500-4a0d-b7f2-ee223dd5b02f"
       },
       "source": [
         "# Checking if still any value present in dataset\n",
@@ -498,7 +498,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i4VAhZAALpfd",
-        "outputId": "35f2c104-584f-4acd-ec90-c02b772d5006"
+        "outputId": "7dd816bb-c9bb-4d22-c8f1-f8801a49c25d"
       },
       "source": [
         "# Checking unique values over each columns\n",
@@ -548,7 +548,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SMPya9OYPuRi",
-        "outputId": "847e2643-311f-48f9-9098-dc2518f544f9"
+        "outputId": "1b8d1363-21b7-4a6b-d912-41c26ed9018b"
       },
       "source": [
         "# Finding top 10 host_id with most quantity of listings\n",
@@ -587,7 +587,7 @@
           "height": 367
         },
         "id": "6Wghpl6qRkXM",
-        "outputId": "d4abae4b-0849-4f73-dd73-fa29f5a216d6"
+        "outputId": "8bccc628-28c2-4e2c-8e6e-e7604e2dfc70"
       },
       "source": [
         "# Plotting graph\n",
@@ -649,7 +649,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i6YaP5RYS1_R",
-        "outputId": "4f5c5598-1b01-4719-851a-7d9a2a35e1d3"
+        "outputId": "e7340213-8a8e-4960-d7b0-58196b6ab97d"
       },
       "source": [
         "# Lets find frequency count of each room_type\n",
@@ -680,7 +680,7 @@
           "height": 321
         },
         "id": "NPunLVGGT7wP",
-        "outputId": "8383ae99-74ef-4e9d-c7a3-ce692d1ee02a"
+        "outputId": "fd3cf4bc-12c6-4bec-c42f-aeefa268b09f"
       },
       "source": [
         "# Plotting pie chart\n",
@@ -693,7 +693,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fe9ca7be710>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f5d7fea0ed0>"
             ]
           },
           "metadata": {},
@@ -736,7 +736,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rmlikXhLZyU2",
-        "outputId": "fc784c01-2a1b-4ef2-887a-3479ae1a1651"
+        "outputId": "9c1f7dd8-8bb2-4390-fc1e-d2a0a2d0dc34"
       },
       "source": [
         "# Lets find frequency count of each neighbourhood_group\n",
@@ -769,7 +769,7 @@
           "height": 321
         },
         "id": "G7zmtvqvaI7F",
-        "outputId": "59ed1f3a-ed00-4ab2-e265-3f5ac36a0d31"
+        "outputId": "7db6de74-6584-4923-c2b2-eed833e2c066"
       },
       "source": [
         "# Plotting pie chart\n",
@@ -782,7 +782,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fe9c9818790>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f5d7f6185d0>"
             ]
           },
           "metadata": {},
@@ -825,7 +825,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Iwy_I6GSa7lD",
-        "outputId": "a694e70a-f57b-4749-d1e8-58cb631e92f1"
+        "outputId": "2820c53e-32e7-4d55-cb54-29d28fc339a2"
       },
       "source": [
         "# Finding room_type counts per neighbourhood_group\n",
@@ -857,7 +857,7 @@
           "height": 407
         },
         "id": "NYr3FjeybY-3",
-        "outputId": "28239f4e-f601-4bac-cd16-5654b6b4b1f1"
+        "outputId": "3778dc52-b479-49ae-cef3-b3036db3c176"
       },
       "source": [
         "# Plotting graph\n",
@@ -917,7 +917,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_O8XOo8ViF4K",
-        "outputId": "075e87c1-28f1-4a02-c9e0-e5338d01156d"
+        "outputId": "656f0f66-9e80-466c-d404-8598542b22d2"
       },
       "source": [
         "# Aggregate price of room_type over each neighbourhood_group\n",
@@ -949,7 +949,7 @@
           "height": 351
         },
         "id": "sYuTbZPWiovl",
-        "outputId": "5de6f33d-ce8e-439d-b541-4561579a1beb"
+        "outputId": "f30c512e-4212-49fb-bdfb-4cff60f557f2"
       },
       "source": [
         "# Plotting line graph\n",
@@ -1011,7 +1011,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f1d145ea-1cce-4755-ee4c-8f856598f425"
+        "outputId": "5a5a9b5d-c701-41e0-c82b-5267115f8bcb"
       },
       "source": [
         "# Checking basic description about price column\n",
@@ -1056,7 +1056,7 @@
           "height": 337
         },
         "id": "BZ6O0ymeuWWw",
-        "outputId": "0b293b0b-7210-4c04-dbbd-c3f593680bbf"
+        "outputId": "bc035d3a-e44d-4d2f-e9c1-c0b8d1d74048"
       },
       "source": [
         "# Finding airbnb with max price 10k\n",
@@ -1189,7 +1189,7 @@
           "height": 969
         },
         "id": "hw-iUU_JvLGC",
-        "outputId": "293f0073-1f8f-4c07-b3bf-911013c7ea2e"
+        "outputId": "16854ca9-ec13-406f-9ae3-d13e358f8a0b"
       },
       "source": [
         "# Finding airbnb with min price 0\n",
@@ -1465,7 +1465,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fINgEtWSvjuk",
-        "outputId": "6d43b264-f06b-4fa5-91dc-32f09258e0e9"
+        "outputId": "a21133ed-02c3-4ca4-8829-129a74906d40"
       },
       "source": [
         "# Lets start analysis on top 10 no. of listings price\n",
@@ -1512,7 +1512,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pnTOzmhQx3_p",
-        "outputId": "dd7f36d5-e7ec-4e27-c68e-482f89c51301"
+        "outputId": "5e359c0d-a57b-4a0f-9502-670f42902a88"
       },
       "source": [
         "# Finding room type counts for above top 10 price frequency listings\n",
@@ -1551,7 +1551,7 @@
           "height": 351
         },
         "id": "cfOqBuJNz_zi",
-        "outputId": "ef8b381c-9623-4cc7-e114-c03305777f17"
+        "outputId": "3e5fa2e3-1958-4606-a63d-d700b317133d"
       },
       "source": [
         "# Plotting graph\n",
@@ -1611,7 +1611,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y5xrKsbakku4",
-        "outputId": "5877b8dd-acdf-4f02-d8e1-04fb27d3eeb6"
+        "outputId": "27e5feae-aafb-465e-888e-715fb5a5e5cc"
       },
       "source": [
         "# Lets explore top 10 neighbourhood by counts in dataset\n",
@@ -1649,7 +1649,7 @@
           "height": 441
         },
         "id": "GNUAptY7llXF",
-        "outputId": "314bfc4d-f0d9-49db-d126-645c3d2a4037"
+        "outputId": "5b099e61-a538-4f51-924a-2be936d32153"
       },
       "source": [
         "top10_neighbourhood.plot(kind=\"bar\", figsize=(15,5))\n",
@@ -1699,7 +1699,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cz-FxaFCnn-7",
-        "outputId": "c56928b2-9850-4eec-c6cb-3192fce7cc17"
+        "outputId": "2f018e06-cafd-4257-c2bf-80d3020049f4"
       },
       "source": [
         "# Finding room type counts for above top 10 neighbourhood frequency listings\n",
@@ -1738,7 +1738,7 @@
           "height": 441
         },
         "id": "Jb3535xXoZbJ",
-        "outputId": "04f9edee-2cd2-46ce-b84e-a7d7fb9797e8"
+        "outputId": "84d2a480-908b-4a12-d464-15c43a266048"
       },
       "source": [
         "# Plotting graph\n",
@@ -1798,7 +1798,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZWUrn1usvWZi",
-        "outputId": "180c1f73-b65e-4c43-a75f-96985c1f3719"
+        "outputId": "23d7a3dd-a044-4bfc-b9a5-dfa3b0028436"
       },
       "source": [
         "# Frequency counts of top 5 minimum nights listings\n",
@@ -1829,7 +1829,7 @@
           "height": 353
         },
         "id": "VnS7oTWHx1hH",
-        "outputId": "1792f717-417b-43b7-873b-71007194661e"
+        "outputId": "c190c699-4337-4cd0-8d1b-8711b8b3c678"
       },
       "source": [
         "min_night.plot(kind=\"bar\", figsize=(10,5))\n",
@@ -1888,7 +1888,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lf1Sdyj9yodg",
-        "outputId": "85afb0b8-24cb-46cc-872c-f5eab0adda6e"
+        "outputId": "ff95f172-b985-4a01-eb13-50b9b2100fd6"
       },
       "source": [
         "# Finding frequency counts for number of reviews\n",
@@ -1936,7 +1936,7 @@
           "height": 153
         },
         "id": "Oq4XJH-60LHP",
-        "outputId": "73021b28-7752-4a16-fabb-16907f37fef9"
+        "outputId": "89b4e505-ce01-4527-e842-5f82bf1917ec"
       },
       "source": [
         "# Finding airbnb with maximum number of reviews\n",
@@ -2032,7 +2032,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FE0Uxchx08RM",
-        "outputId": "6289c0ee-c5f6-442f-ed10-cf8f66e7cbdf"
+        "outputId": "036dc429-8da8-4c17-ec45-c33c3c4c6f21"
       },
       "source": [
         "# Let's explore top 500 number of reviews data\n",
@@ -2064,7 +2064,7 @@
           "height": 351
         },
         "id": "eaCguHNy5v_Y",
-        "outputId": "92283433-e52e-4cbf-c1f2-31f74291e73a"
+        "outputId": "04be8b85-7ef9-4a69-8728-e576591d63bf"
       },
       "source": [
         "# Plotting line graph\n",
@@ -2124,7 +2124,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CrZgOBmW6qHD",
-        "outputId": "373afc23-76b1-46e0-bd31-bcf9a66ec030"
+        "outputId": "4fbba75a-c136-4f42-a00d-27f37b162704"
       },
       "source": [
         "# Finding airbnb listings count those reviews_per_month greater than 2\n",
@@ -2160,7 +2160,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sUx3XnmS7j4K",
-        "outputId": "4d9e8110-fc82-41e6-cd3c-36fc028beda8"
+        "outputId": "8cbdd748-1e93-4c25-c079-1cc282bacb4d"
       },
       "source": [
         "# Finding maximum number of reviews per month\n",
@@ -2188,7 +2188,7 @@
           "height": 222
         },
         "id": "XGrdqeel8Oqf",
-        "outputId": "228619c0-ac12-48bc-9472-f1a1557ea90a"
+        "outputId": "4922b833-bb13-4df3-fdc9-4b3ba34424fe"
       },
       "source": [
         "# Finding airbnb with max number of reviews per month\n",
@@ -2293,7 +2293,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6IW4PYZ6I7uu",
-        "outputId": "af48c29e-32fd-48a5-f95b-ea27ec020770"
+        "outputId": "9e015deb-0372-4b5d-c63b-9671ab22c437"
       },
       "source": [
         "# Calculating mean for host_list\n",
@@ -2329,7 +2329,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ShrQaO0VKS3T",
-        "outputId": "3ba196e3-f689-4b88-9eba-c0b37738bb11"
+        "outputId": "c9bf852c-b5cf-49b3-94d0-69d5e2fb6d25"
       },
       "source": [
         "# Finding max host listings count\n",
@@ -2357,7 +2357,7 @@
           "height": 1000
         },
         "id": "T4mhvro6Kdt9",
-        "outputId": "b860a9b2-3b40-4ae2-b15c-40806cd72624"
+        "outputId": "27068f71-1520-43f8-9a09-281d9501bc65"
       },
       "source": [
         "# Finding details about max host listings\n",
@@ -2643,7 +2643,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oOdUVQyGLuZx",
-        "outputId": "18fe5500-b8d4-4ea9-fe51-13dd1d6a4b5f"
+        "outputId": "ff46b13c-38e8-4a6e-cdfc-47798abc64c3"
       },
       "source": [
         "# Frequency counts for Availability_365\n",
@@ -2690,7 +2690,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8QZ0z5FnMMY9",
-        "outputId": "cd41a001-25f7-49ad-bb45-df84a793057f"
+        "outputId": "9e14b4eb-caee-4fa4-84b4-c0879a98ffbc"
       },
       "source": [
         "# Finding average availability of different room_type over different neighbourhood_groups\n",
@@ -2722,7 +2722,7 @@
           "height": 407
         },
         "id": "DIgaMgshNNzJ",
-        "outputId": "b19f2ef5-52d4-4925-d4b6-d330c69fceb6"
+        "outputId": "68e8d7c3-e64e-4b5a-ef47-535135b79ede"
       },
       "source": [
         "# Plotting graph\n",
@@ -2785,7 +2785,7 @@
           "height": 405
         },
         "id": "RJsmra2eORo9",
-        "outputId": "ef1dd223-7282-448c-e972-feb1b4e467d3"
+        "outputId": "4b1a967b-1cd5-4487-f336-7e6ba976f598"
       },
       "source": [
         "# scatter plot\n",
@@ -2798,7 +2798,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fe9c9257a10>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f5d7f0fd150>"
             ]
           },
           "metadata": {},
@@ -2844,7 +2844,7 @@
           "height": 237
         },
         "id": "XhqUtK8MhW7t",
-        "outputId": "4dcb6f79-3e56-41e9-9ec4-ade210bc2350"
+        "outputId": "78b252e7-5f02-49e5-d81e-978894c16f25"
       },
       "source": [
         "# Subsetting revelant columns needed\n",
@@ -2968,7 +2968,7 @@
           "height": 432
         },
         "id": "JXR4ImZiiOcp",
-        "outputId": "ec4cc76f-1d7f-4f75-dcb5-cbbc2af1209e"
+        "outputId": "2ef9929b-b7d0-45e2-b38a-9b1b8c36eca2"
       },
       "source": [
         "# Plotting heat map\n",
